clusters/hetzner/cloudops-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudops-api
  namespace: apps
  labels:
    app: cloudops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudops-api
  template:
    metadata:
      labels:
        app: cloudops-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: cloudops-api
          image: ghcr.io/rai-trabelsi/cloudops-api:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cloudops-api-service
  namespace: apps
  labels:
    app: cloudops-api
spec:
  selector:
    app: cloudops-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
