clusters/hetzner/cloudops-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudops-api-ingress
  namespace: apps
spec:
  rules:
    - host: cloudops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudops-api-service
                port:
                  number: 80
